# is-personalized-advisory

./: .dockerignore  .env.sample  .gitignore  .gitlab-ci.yml  .semgrep.yml  .semgrepignore  Dockerfile  INTEGRATION_TEST_GUIDE.md  README.md  REFACTOR_SUMMARY.md  TEST_SCENARIOS.md  docker-compose.yml  pyproject.toml  pytest.ini  sample_flow_for_api.ipynb  test_flow_with_sec_id_20251118.ipynb  test_frontend_payload.py  test_rebalance_api.py  test_rebalancer.ipynb
app/: config.py  data_store.py  main.py  models.py
app/utils/: auth.py  client_service.py  data_loader.py  health_score.py  health_service.py  portfolio_fetcher.py  portfolios.py  portfolios_repo.py  portfolios_service.py  portprop_matrices.py  portprop_matrices_repo.py  rebalance_handler.py  rebalancer.py  rebalancer_mock.py  rebalancer_repo.py  utils.py
notebooks/: 90-query_portprop.ipynb  99-check_persist.ipynb
scripts/: call_rebalance_v2.py  concurrent_rebalance_test.py  export_dwh_cache.py  export_portprop_to_parquet.py  generate_mock_positions.py  profile_rebalance_api.py  view_profile.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_rebalance_api.py
tests/unit/: __init__.py  test_rebalance_handler.py
