[project]
name = "personalized-advisory-backend"
version = "1.0.0"
description = "FastAPI backend for personalized investment advisory services"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "ipykernel>=6.30.1",
    "pyarrow>=21.0.0",
    "databricks>=0.2",
    "databricks-sql-connector>=4.1.2",
    "sqlalchemy>=2.0.43",
    "databricks-sqlalchemy>=2.0.8",
    "jupyter>=1.1.1",
]

[project.scripts]
start = "app.main:run_server"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.ruff]
lint.select = [
    "E", # errors
    "F", # flake8 errors
    "I", # import-related errors
    "W", # Pycodestyle warnings
    "B", # Bugbear warnings
]
lint.ignore = [
    "E501",
    "E402", # import not at top of file
    "B008", # function-call-in-default-argument
]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
